cmake_minimum_required(VERSION 3.11)

set(APP_NAME phyvr_controller)

project(${APP_NAME})

# PHYVR CONTROLLER
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

set(PHYVR_CONTROLLER_PATH_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include" CACHE INTERNAL "")
include_directories(${PHYVR_CONTROLLER_PATH_INCLUDE_DIRS})

#set(PHYVR_CONTROLLER_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src")
#file(GLOB_RECURSE PHYVR_CONTROLLER_SRC "${PHYVR_CONTROLLER_PATH}/*.cpp")
#add_library(${APP_NAME} SHARED ${PHYVR_CONTROLLER_SRC})
